visiba-care/vc-fileserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vc-fileserver
spec:
  selector:
    matchLabels:
      app: vc-fileserver
  template:
    metadata:
      labels:
        app: vc-fileserver
    spec:
      containers:
        - name: vc-fileserver
          image: visiba.azurecr.io/visiba-care/fileservice:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              subPath: instance.json
              mountPath: /app/Configurations/instance.json
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: config-volume
          secret:
            secretName: fileserver-instance-config
