visiba-care/vc-fileserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vc-fileserver
  namespace: vc-fileserver-example-ns
spec:
  selector:
    app: vc-fileserver
  ports:
  - port: 80
    targetPort: 80
