visiba-care/vc-fileserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fileserver-ingress
spec:
  rules:
  - host: fs1-instancename.exampledomain.topdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vc-fileserver
            port:
              number: 80
